# stringlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_xcode.sh
include/: stringlib.h
src/: stringlib.c
tests/: test_stringlib.c
